--- a/pgpool_attach.yml
+++ b/pgpool_attach.yml
@@ -16,3 +16,9 @@
       service:
         name: pgpool2
         state: restarted
+
+    - name: PGPool check node status
+      shell: psql -U hcuser -d hcdb -h localhost -p 9444 -c "show pool_nodes"
+      register: result
+    - debug:
+        var: result.stdout_lines    
