--- a/pgpool_hba.yml
+++ b/pgpool_hba.yml
@@ -3,7 +3,7 @@
   tasks:
     - name: replace pool_hba file versi terbaru
       copy: 
-        src: ./files/pool_hba.conf
+        src: /data/pgprov/files/pool_hba.conf
         dest: /etc/pgpool2/pool_hba.conf
         owner: root
         group: root
